--- a/assets/style.css
+++ b/assets/style.css
@@ -4,10 +4,11 @@
 }
 
 #bodybackground  {
-    width:100%;
-    height:100%;
     background-image: url("https://img.freepik.com/free-photo/white-wall_1194-5956.jpg?size=338&ext=jpg");
-    background-repeat:repeat;
+    min-height:100%;
+    min-width:100%;
+    position:fixed;
+    left:0;
 }
 
 .navbar {
